--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,21 +8,40 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
     <title>StoryBook</title>
 </head>
 
 <body>
     {{> _header}}
+
+    {{#if user}}
+    {{> _add-btn}}
+    {{/if}}
+
     <main>
         <div class="container">
             {{{body}}}
         </div>
     </main>
-    <script
-  src="https://code.jquery.com/jquery-3.4.1.js"
-  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="crossorigin="anonymous"></script>
+
+    {{> _footer}}
+
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script> $(document).ready(() => { $('.sidenav').sidenav();});</script>
+    <script src="https://cdn.ckeditor.com/4.11.4/standard/ckeditor.js"></script>
+    <script> 
+        $(document).ready(() => { $('.sidenav').sidenav(); });
+        $(document).ready(() => {
+            $('select').formSelect();
+        });
+        CKEDITOR.replace('body', {
+            plugins: 'wysiwygarea, toolbar, basicstyles, link'
+        });
+        </script>
+
+
 </body>
 
 </html>
