--- a/views/index/dashboard.handlebars
+++ b/views/index/dashboard.handlebars
@@ -15,7 +15,7 @@
             <tr>
                 <td><a href="/stories/show/{{id}}">{{title}}</a></td>
                 <td>{{formatDate date 'MMMM Do YYYY'}}</td>
-                <td><span class="dash-status">Status</span></td>
+                <td><span class="dash-status">{{status}}</span></td>
                 <td><a class="btn left-align" href="/stories/edit/{{id}}"><i class="fa fa-pencil"></i> Edit</a>
 
 
