--- a/views/stories/index.handlebars
+++ b/views/stories/index.handlebars
@@ -9,7 +9,7 @@
             </div>
             <div class="card-content center-align">
                 <h5>{{title}}</h5>
-                <p class="story-text">{{{stripTags (truncate body 150)}}}</p>
+                <p class="story-text">{{stripTags (truncate body 150)}}</p>
                 <br>
 
                 <div class="chip">
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div class="card-action center-align">
-                <a class="btn grey" href="/stories/show/{{id}}">Read More</a>
+                <a class="btn grey" href="/stories/show/{{id}}"> Read More</a>
             </div>
         </div>
     </div>
